--- a/teams-u12b.html
+++ b/teams-u12b.html
@@ -1,7 +1,19 @@
 <div class="col-container">
   <div class="col1">
     <h3 style="margin-top: 10px">CONTACTS</h3>
-    <ul></ul>
+    <ul>
+      <li>
+        <b>Head Coach: </b><span class="nowrap">Mark Randall - <a href="tel:0423 442 051">0423 442 051</a></span>
+      </li>
+      <li><b>Assistant Coach: </b><span class="nowrap">Gordon Watt</span></li>
+      <li>
+        <b>Team Manager: </b><span class="nowrap">Julie Humble - <a href="tel:0411489201">0411489201</a></span>
+      </li>
+      <li>
+        <b>Team Manager: </b><span class="nowrap">Jessica Randall - <a href="tel:0421 114 072">0421 114 072</a></span>
+      </li>
+      <li><b>Trainer: </b><span class="nowrap">Luke Baker</span></li>
+    </ul>
   </div>
   <div class="col2">
     <div style="padding-top: 1em">
