team fixture links, removed results field

--- a/teams-u14m.html
+++ b/teams-u14m.html
@@ -15,9 +15,22 @@
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0">Fixture: TBD</p>
-      <p style="margin: 0">Results: TBD</p>
-      <p style="margin: 0">Ladder: TBD</p>
+      <p style="margin: 0">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u14/5514267b"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </p>
+      <p style="margin: 0">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u14/5514267b/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </p>
     </div>
   </div>
 </div>
