--- a/teams.html
+++ b/teams.html
@@ -2,72 +2,202 @@
   <tbody class="row-hover">
     <tr class="row-1 odd">
       <td class="column-1"><h4>Under 8 Mixed</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u8-1/170e3013"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u8-1/170e3013/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u08m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-2 even">
       <td class="column-1"><h4>Under 9 Mixed</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u9/09618d26"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u9/09618d26/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u09m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-3 odd">
       <td class="column-1"><h4>Under 10 Mixed</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u10/d904d75e"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u10/d904d75e/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u10m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-4 even">
       <td class="column-1"><h4>Under 11 Mixed</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u11/226cbbee"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u11/226cbbee/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u11m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-5 odd">
       <td class="column-1"><h4>Under 12 Boys</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u12/5341b1be"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u12/5341b1be/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u12b-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-6 even">
       <td class="column-1"><h4>Under 12 Girls</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u12-girls/69318f8e"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u12-girls/69318f8e/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u12g-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-7 odd">
       <td class="column-1"><h4>Under 13 Boys</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u13/8e0e1dbb"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u13/8e0e1dbb/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u13b-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-8 even">
       <td class="column-1"><h4>Under 14 Mixed</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u14/5514267b"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u14/5514267b/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u14m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-9 odd">
       <td class="column-1"><h4>Under 16 Boys</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u16/d7aa78f9"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u16/d7aa78f9/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u16b-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-10 even">
       <td class="column-1"><h4>Under 16 Girls</h4></td>
-      <td class="column-2">Fixture: TBD</td>
-      <td class="column-2">Results: TBD</td>
-      <td class="column-2">Ladder: TBD</td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u16-girls/8b6f0f4e"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </td>
+      <td class="column-2">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2025/teams/bayswater-u16-girls/8b6f0f4e/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </td>
       <td class="column-5"><a href="2025-u16g-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
   </tbody>
